[package]
name = "loki"
version = "0.1.0"
edition = "2021"
authors = ["jlf0dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
base64 = "0.13.1"
block-modes = "0.9.1"
cbc = "0.1.2"
clap = { version = "4.0.10", features = ["derive"] }
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", features = ["parallel"] }
rand = "0.8.5"
ring = "0.16.20"
sha2 = "0.10.6"
